crates/aiken-lang/src/parser/definition/snapshots/def_property_test_annotated_fuzzer.snap
---
source: crates/aiken-lang/src/parser/definition/test.rs
description: "Code:\n\ntest foo(x: Int via foo()) {\n    True\n}\n"
---
Test(
    Function {
        arguments: [
            ArgVia {
                arg_name: Named {
                    name: "x",
                    label: "x",
                    location: 9..10,
                    is_validator_param: false,
                },
                location: 9..15,
                via: Call {
                    arguments: [],
                    fun: Var {
                        location: 20..23,
                        name: "foo",
                    },
                    location: 20..25,
                },
                tipo: (),
                annotation: Some(
                    Constructor {
                        location: 12..15,
                        module: None,
                        name: "Int",
                        arguments: [],
                    },
                ),
            },
        ],
        body: Var {
            location: 33..37,
            name: "True",
        },
        doc: None,
        location: 0..26,
        name: "foo",
        public: false,
        return_annotation: Some(
            Constructor {
                location: 0..39,
                module: None,
                name: "Bool",
                arguments: [],
            },
        ),
        return_type: (),
        end_position: 38,
        on_test_failure: FailImmediately,
    },
)
